--- a/atividades/atividade3-/home.html
+++ b/atividades/atividade3-/home.html
@@ -22,12 +22,45 @@
     </nav>
 
     <main class="img-fundo">
+      <article id="img-pop">
+        <table>
+          <tr>
+            <td>
+              <img src="img\fundo-arquitetura4.jpg" />
+
+              <p>
+                O projeto ficou incrível e totalmente alinhado com nossas
+                necessidades.
+              </p>
+            </td>
+            <td>
+              <img src="img\fundo-arquitetura3.jpg" />
+
+              <p>
+                Contamos com uma equipe qualificada e apaixonada pelo que faz
+              </p>
+            </td>
+            <td>
+              <img src="img\fundo-arquitetura2.jpg" />
+
+              <p>Trabalhamos com soluções que respeitam o meio ambiente</p>
+            </td>
+            <td>
+              <img src="img\fundo-arquitetura1.jpg" />
+
+              <p>vamos criar juntos o espaço dos seus sonhos</p>
+            </td>
+          </tr>
+        </table>
+      </article>
+
       <section class="container">
         <!-- Bloco com imagem à esquerda e texto à direita -->
         <div class="img-text-left">
-          <img src="img\El-Coronavirus-en-la-Arquitectura.jpg.webp" alt="Imagem de Arquitetura" />
+          <img src="img\arquiteta.webp" alt="Imagem de Arquiteta" />
         </div>
         <article>
+          <h2>Oque nos move</h2>
           <p>
             Na I-Design, somos apaixonados por criar espaços que inspiram e
             conectam. Trabalhamos com projetos arquitetônicos inovadores e
@@ -46,10 +79,11 @@
         <div class="clear"></div>
 
         <!-- Bloco com imagem à direita e texto à esquerda -->
-        <div class="img-right">
-          <img src="img\El-Coronavirus-en-la-Arquitectura.jpg.webp" alt="Imagem de Arquitetura" />
+        <div class="img-text-right">
+          <img src="img\planta.jpg" alt="Imagem de Arquitetura" />
         </div>
         <article>
+          <h2>Oque Fazemos</h2>
           <p>
             Ao longo dos anos, a I-Design tem se destacado por sua abordagem
             criativa e funcional, sempre incorporando tendências do mercado e as
@@ -62,7 +96,63 @@
         </article>
 
         <div class="clear"></div>
+
+        <div class="img-text-left">
+          <img src="img\planta2.jpg" alt="Imagem de Arquiteta" />
+        </div>
+        <article>
+          <h2>Foco em inovação</h2>
+          <p>
+            Nossa missão na I-Design é transformar espaços através de projetos
+            inovadores que unem a arte da arquitetura com soluções práticas de
+            design. Com mais de 30 anos de experiência, nossa equipe se dedica a
+            criar ambientes que são tanto esteticamente agradáveis quanto
+            funcionais. Trabalhamos para que cada projeto seja um reflexo único
+            das necessidades e desejos de nossos clientes. Buscamos, sempre,
+            soluções criativas que melhoram a experiência cotidiana e impactam
+            positivamente o ambiente ao redor.
+          </p>
+        </article>
+        <div class="clear"></div>
+
+        <div class="img-text-right">
+          <img src="img\planejamento.jpg" alt="Imagem de Arquitetura" />
+        </div>
+        <article>
+          <h2>Experiência do cliente</h2>
+          <p>
+            A sustentabilidade é um valor fundamental para nós. Cada projeto é
+            pensado de forma a minimizar o impacto ambiental, ao mesmo tempo em
+            que proporciona conforto e eficiência. Estamos comprometidos em
+            entregar resultados que superem as expectativas, respeitando o tempo
+            e as limitações orçamentárias de cada cliente, e sempre com foco no
+            design que transforma.
+          </p>
+        </article>
+
+        <div class="clear"></div>
       </section>
+
+      <div class="container-inline">
+        <div class="inline-block">
+          <p>
+            <a href="portifolio.html"
+              >transformamos espaços em lugares incríveis, com um design moderno
+              e funcional</a
+            >
+          </p>
+        </div>
+        <div class="inline-block">
+          <p>
+            <a href="contato.html"
+              >Interessado em um projeto? Entre em contato conosco</a
+            >
+          </p>
+        </div>
+        <div class="inline-block">
+          <p>Inovação, sustentabilidade e design</p>
+        </div>
+      </div>
     </main>
 
     <footer>
