--- a/atividades/atividade3-/portifolio.html
+++ b/atividades/atividade3-/portifolio.html
@@ -90,7 +90,7 @@
               <br>
               <p><strong>Descrição:</strong> Uma casa com estilo morderno e rustico com cores cinzetas e interior espaçoso</p>
               <br>
-              <p><strong>Estrutura:</strong> É uma casa grande e larga bem espaçosa, todo seu exteriro e interior tenso um desing moderno e mais quadrado e com masi janelas para maior entrada de luz natural</p>
+              <p><strong>Estrutura:</strong> É uma casa grande e larga bem espaçosa, todo seu exteriro e interior tenso um desing moderno e mais quadrado</p>
               <br>
              
             </article>
@@ -144,7 +144,7 @@
               <br>
               <p><strong>Descrição:</strong> Uma casa com estilo morderno e rustico com cores cinzetas e interior espaçoso </p>
               <br>
-              <p><strong>Estrutura:</strong> É uma casa grande e larga bem espaçosa, todo seu exteriro e interior tenso um desing moderno e mais quadrado e com masi janelas para maior entrada de luz natural </p>
+              <p><strong>Estrutura:</strong> É uma casa grande e larga bem espaçosa, todo seu exteriro e interior tenso um desing moderno e mais quadrado</p>
               <br>
              
             </article>
