--- a/atividades/atividade3-projeto-arquitetura/clientes.html
+++ b/atividades/atividade3-projeto-arquitetura/clientes.html
@@ -22,59 +22,29 @@
         </nav>
 
         <main class="img-fundo">
-            <article id="img-pop">
-                <table>
-                    <tr>
-                        <td>
-                            <img src="img\fundo-arquitetura4.jpg" />
-
-                            <p>
-                                O projeto ficou incrível e totalmente alinhado
-                                com nossas
-                                necessidades.
-                            </p>
-                        </td>
-                        <td>
-                            <img src="img\fundo-arquitetura3.jpg" />
-
-                            <p>
-                                Contamos com uma equipe qualificada e apaixonada
-                                pelo que faz
-                            </p>
-                        </td>
-                        <td>
-                            <img src="img\fundo-arquitetura2.jpg" />
-
-                            <p>Trabalhamos com soluções que respeitam o meio
-                                ambiente</p>
-                        </td>
-                        <td>
-                            <img src="img\fundo-arquitetura1.jpg" />
-
-                            <p>vamos criar juntos o espaço dos seus sonhos</p>
-                        </td>
-                    </tr>
-                </table>
-            </article>
 
             <h1>Veja alguns dos nossos clientes</h1>
 
             <section class="container-comentario">
 
                 <div class="clear"></div>
+                
 
                 <div class="img-text-cliente">
                     <img src="img\casa-floral.jpg" alt="Imagem de exposição" />
                 </div>
 
+                <br>
                 <article class="container-cliente">
                     <img src="img/cliente1.jpg" class="icone-cliente" />
                     <div class="conteudo-cliente">
+                        <h3>Ana Julia</h3>
                         <p>“O projeto superou todas as minhas expectativas! A
                             equipe da I-Design é altamente qualificada e
-                            atenciosa. O resultado final é incrível!”</p>
+                            atenciosa. O resultado final é incrível!”<br><strong>Nota: &#9734  &#9733 &#9733 &#9733 &#9733 4/5</strong></p>
                     </div>
                 </article>
+                <br>
 
                 <div class="clear"></div>
 
@@ -82,14 +52,17 @@
                     <img src="img\pousada.jpg" alt="Imagem de exposição" />
                 </div>
 
+                <br>
                 <article class="container-cliente">
                     <img src="img/cliente2.jpg" class="icone-cliente" />
                     <div class="conteudo-cliente">
+                        <h3>Carlos</h3>
                         <p>“Excelente trabalho! O design da minha pousada ficou
                             moderno, aconchegante e super funcional. A I-Design
-                            realmente entende as necessidades dos clientes!”</p>
+                            realmente entende as necessidades dos clientes!"<br><strong>Nota: &#9733 &#9733 &#9733 &#9733 &#9733 5/5</strong></p>
                     </div>
                 </article>
+                <br>
 
                 <div class="clear"></div>
 
@@ -98,14 +71,17 @@
                         alt="Imagem de exposição" />
                 </div>
 
+                <br>
                 <article class="container-cliente">
                     <img src="img/cliente3.jpg" class="icone-cliente" />
                     <div class="conteudo-cliente">
+                        <h3>Matilda</h3>
                         <p>“A transformação da minha casa foi espetacular. Cada
                             detalhe foi pensado com muito carinho e qualidade.
-                            Recomendo a I-Design de olhos fechados!”</p>
+                            Recomendo a I-Design de olhos fechados!”<br><strong>Nota: &#9734 &#9733 &#9733 &#9733 &#9733 4/5</strong></p>
                     </div>
                 </article>
+                <br>
 
                 <div class="clear"></div>
 
@@ -114,18 +90,23 @@
                         alt="Imagem de exposição" />
                 </div>
 
+                <br>
                 <article class="container-cliente">
                     <img src="img/cliente4.jpg" class="icone-cliente" />
                     <div class="conteudo-cliente">
+                        <h3>Theffy</h3>
                         <p>“A equipe da I-Design fez um trabalho excepcional.
                             Eles conseguiram combinar funcionalidade e estética
-                            de maneira única. Estou muito satisfeito!”</p>
+                            de maneira única. Estou muito satisfeito!”<br><strong>Nota: &#9733 &#9733 &#9733 &#9733 &#9733 5/5</strong></p>
                     </div>
                     
                 </article>
+                <br>
+
                 <div class="clear"></div>
 
             </section>
+            <a class="voltar-inicio" href="#">Voltar ao topo</a>
 
         </main>
 
