--- a/atividades/atividade3-projeto-arquitetura/portifolio.html
+++ b/atividades/atividade3-projeto-arquitetura/portifolio.html
@@ -23,41 +23,7 @@
 
     <main class="img-fundo">
 
-        <article id="img-pop">
-            <table>
-              <tr>
-                <td>
-                  <img src="img\fundo-arquitetura4.jpg"/>
-  
-                  <p>
-                    O projeto ficou incrível e totalmente alinhado com nossas necessidades.
-                  </p>
-                </td>
-                <td>
-                  <img src="img\fundo-arquitetura3.jpg"/>
-  
-                  <p>
-                    Contamos com uma equipe qualificada e apaixonada pelo que faz
-                  </p>
-                </td>
-                <td>
-                  <img src="img\fundo-arquitetura2.jpg" />
-  
-                  <p>
-                    Trabalhamos com soluções que respeitam o meio ambiente
-                  </p>
-                </td>
-                <td>
-                  <img src="img\fundo-arquitetura1.jpg"/>
-  
-                  <p>
-                    vamos criar juntos o espaço dos seus sonhos
-                  </p>
-                </td>
-              </tr>
-            </table>
-        </article>
-        
+      <h1> Projetos Realizados </h1>
         <section class="container">
             <div class="sombra-blur"></div>
             <!-- Bloco com imagem à esquerda e texto à direita -->
@@ -149,6 +115,7 @@
              
             </article>
         </section>
+        <a class="voltar-inicio" href="#">Voltar ao topo</a>
 
     </main>
 
