--- a/atividades/atividade3-projeto-arquitetura/sobre.html
+++ b/atividades/atividade3-projeto-arquitetura/sobre.html
@@ -22,44 +22,7 @@
         </nav>
 
         <main class="img-fundo">
-
-            <article id="img-pop">
-                <table>
-                    <tr>
-                        <td>
-                            <img src="img\fundo-arquitetura4.jpg" />
-
-                            <p>
-                                O projeto ficou incrível e totalmente alinhado
-                                com nossas necessidades.
-                            </p>
-                        </td>
-                        <td>
-                            <img src="img\fundo-arquitetura3.jpg" />
-
-                            <p>
-                                Contamos com uma equipe qualificada e apaixonada
-                                pelo que faz
-                            </p>
-                        </td>
-                        <td>
-                            <img src="img\fundo-arquitetura2.jpg" />
-
-                            <p>
-                                Trabalhamos com soluções que respeitam o meio
-                                ambiente
-                            </p>
-                        </td>
-                        <td>
-                            <img src="img\fundo-arquitetura1.jpg" />
-
-                            <p>
-                                vamos criar juntos o espaço dos seus sonhos
-                            </p>
-                        </td>
-                    </tr>
-                </table>
-            </article>
+            <h1> Sobre Nós </h1>
 
             <section class="container">
                 <!-- Bloco com imagem à esquerda e texto à direita -->
@@ -155,7 +118,10 @@
                 </article>
 
                 <div class="clear"></div>
+            </section>
+            <a class="voltar-inicio" href="#">Voltar ao topo</a>
             </main>
+            
 
             <footer>
                 <p>&copy; 2025 I-Design. Todos os direitos reservados.</p>
