--- a/atividades/atividade3-projeto-arquitetura/clientes.html
+++ b/atividades/atividade3-projeto-arquitetura/clientes.html
@@ -8,9 +8,8 @@
     </head>
 
     <body>
-        <header class="fundo-header">
+        <header class="fundo-header2">
             <h1>I-Design</h1>
-            <p>"Tudo é possível"</p>
         </header>
 
         <nav>
