--- a/aulas-css/aula018-animacoes/animacao3d-basico.html
+++ b/aulas-css/aula018-animacoes/animacao3d-basico.html
@@ -1,87 +1,91 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animação 3D com CSS3</title>
 
     <style>
-        body {
-            display: flex; /* Usa flexbox para centralizar */
-            justify-content: center; /* Centraliza horiozontalmente */
-            align-items: center; /* Centraliza verticalmente */
-            height: 100vh; /* Altura total de viewport */
-            background-color: #f0f0f0; /* Cor de fundo cinza claro */
-            perspective: 1000px;
-            overflow: hidden;
-        }
 
-        .cena-3d {
-            width: 200px;
-            height: 200px;
-            position: relative;
-            transform-style: preserve-3d;
-            animation: girar 8s infinite linear;
-        }
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f0f0f0;
+        perspective: 1000px;
+        overflow: hidden;
+      }
 
-        @keyframes girar {
-            from {
-                transform: rotateX(0deg) rotateY(0deg);
-            }
-            to {
-                transform: rotateX(360deg) rotateY(360deg);
-            }
-        }
+      .cena-3d {
+        width: 200px;
+        height: 200px;
+        position: relative;
+        transform-style: preserve-3d;
+        animation: girar 8s infinite linear;
+      }
 
-        .face {
-            position: absolute;
-            width: 200px;
-            height: 200px;
-            opacity: 0.8;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            font-weight: bold;
-            color: white;
-            border: 2px solid white;
-            box-sizing: border-box;
+      @keyframes girar {
+        from {
+          transform: rotateX(0deg) rotateY(0deg);
         }
+        to {
+          transform: rotateX(360deg) rotateY(360deg);
+        }
+      }
 
-        .frente {
-            transform: translateZ(100px);
-            background-color: #3498db;
-        }
-        .tras {
-            transform: translateZ(-100px) rotateY(180deg);
-            background-color: #e74c3c;
-        }
-        .direita {
-            transform: translateX(100px) rotateY(90deg);
-            background-color: #2ecc71;
-        }
-        .esquerda {
-            transform: translateX(-100px) rotateY(-90deg);
-            background-color: #f1c40f;
-        }
-        .topo {
-            transform: translateY(-100px) rotateX(90deg);
-            background-color: #9b59b6;
-        }
-        .base {
-            transform: translateY(100px) rotateX(-90deg);
-            background-color: #1abc9c;
-        }
+      .face {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        opacity: 0.8;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 24px;
+        font-weight: bold;
+        color: white;
+        border: 2px solid white;
+        box-sizing: border-box;
+      }
+
+      .frente {
+        transform: translateZ(100px);
+        background-color: #3498db;
+      }
+      .tras {
+        transform: translateZ(-100px) rotateY(180deg);
+        background-color: #e74c3c;
+      }
+      .direita {
+        transform: translateX(100px) rotateY(90deg);
+        background-color: #2ecc71;
+      }
+      .esquerda {
+        transform: translateX(-100px) rotateY(-90deg);
+        background-color: #f1c40f;
+      }
+      .topo {
+        transform: translateY(-100px) rotateX(90deg);
+        background-color: #9b59b6;
+      }
+      .base {
+        transform: translateY(100px) rotateX(-90deg);
+        background-color: #1abc9c;
+      }
     </style>
   </head>
+
   <body>
     <div class="cena-3d">
-        <div class="face frente">frente</div>
-        <div class="face tras">tras</div>
-        <div class="face direita">direita</div>
-        <div class="face esquerda">esquerda</div>
-        <div class="face topo">SEXO</div>
-        <div class="face base">base</div>
+      <div class="face frente">frente</div>
+      <div class="face tras">tras</div>
+      <div class="face direita">direita</div>
+      <div class="face esquerda">esquerda</div>
+      <div class="face topo">SEXO</div>
+      <div class="face base">base</div>
     </div>
   </body>
+
 </html>
