Petshop - Home feita

--- a/atividades/atividade004-petshop/servicos.html
+++ b/atividades/atividade004-petshop/servicos.html
@@ -34,33 +34,34 @@
         <h1>Banhos</h1>
       </section>
       <section class="content conteudo-principal">
+        <article class="produtos produtos-container">
+          <img src="img\2149202496.jpg" alt="" />
+          <h2>Banho pra filhotes</h2>
+          <p>aquele banho pra ficar cheirosinho desde pequeno</p>
+          <a href="contato.html">R$ ,00</a>
+        </article>
+
         <article class="produtos">
           <img src="img\2150283107.jpg" alt="" />
-          <h2>Banho</h2>
-          <p>Aqui seu pet é o cargo chefe e sai bem limpinho</p>
-          <a href="contato.html"> Clique aqui</a>
+          <h2>Banho porte pequeno</h2>
+          <p></p>
+          <a href="contato.html"> R$ ,00</a>
         </article>
 
         <article class="produtos produtos-container">
           <img src="img\51401.jpg" alt="" />
-          <h2>Tosa</h2>
+          <h2>Banho porte medio</h2>
           <p>Ele fica cheirosinho e limpinho</p>
-          <a href="contato.html"> Clique aqui</a>
+          <a href="contato.html"> R$ ,00</a>
         </article>
 
         <article class="produtos produtos-container">
           <img src="img\2148982406.jpg" alt="" />
-          <h2>Acessorios</h2>
+          <h2>Banho porte grande</h2>
           <p>Aqui tem de tudo pra ele ficar bem!</p>
-          <a href="contato.html"> Clique aqui</a>
+          <a href="contato.html"> R$ ,00</a>
         </article>
 
-        <article class="produtos produtos-container">
-          <img src="img\2149202496.jpg" alt="" />
-          <h2>Comidinhas</h2>
-          <p>Descrição do produto 2</p>
-          <a href="contato.html"> Clique aqui</a>
-        </article>
       </section>
 
       <section class="content conteudo-principal">
@@ -70,37 +71,31 @@
       <section class="content conteudo-principal">
         <article class="produtos">
           <img src="img\2150283107.jpg" alt="" />
-          <h2>Banho</h2>
+          <h2>Tosa pelo curto</h2>
           <p>Aqui seu pet é o cargo chefe e sai bem limpinho</p>
-          <a href="contato.html"> Clique aqui</a>
+          <a href="contato.html"> R$ ,00</a>
         </article>
 
         <article class="produtos produtos-container">
           <img src="img\51401.jpg" alt="" />
-          <h2>Tosa</h2>
+          <h2>Tosa pelo medio</h2>
           <p>Ele fica cheirosinho e limpinho</p>
-          <a href="contato.html"> Clique aqui</a>
+          <a href="contato.html"> R$ ,00</a>
         </article>
 
         <article class="produtos produtos-container">
           <img src="img\2148982406.jpg" alt="" />
-          <h2>Acessorios</h2>
+          <h2>Tosa pelo grande</h2>
           <p>Aqui tem de tudo pra ele ficar bem!</p>
-          <a href="contato.html"> Clique aqui</a>
+          <a href="contato.html"> R$ ,00</a>
         </article>
 
-        <article class="produtos produtos-container">
-          <img src="img\2149202496.jpg" alt="" />
-          <h2>Comidinhas</h2>
-          <p>Descrição do produto 2</p>
-          <a href="contato.html"> Clique aqui</a>
-        </article>
       </section>
       
 
       <section class="parallax parallax2">
         <article>
-          <h1>Serviços prestados</h1>
+          <h1>Promoções</h1>
         </article>
       </section>
 
