--- a/atividades/atividade004-petshop/servicos.html
+++ b/atividades/atividade004-petshop/servicos.html
@@ -26,7 +26,7 @@
     <main>
       <section class="parallax parallax1">
         <article>
-          <h1>AU AU !</h1>
+          <h1>Trabalhando com 4 patas </h1>
         </article>
       </section>
 
@@ -35,33 +35,42 @@
       </section>
       <section class="content conteudo-principal">
         <article class="produtos produtos-container">
-          <img src="img\2149202496.jpg" alt="" />
-          <h2>Banho pra filhotes</h2>
-          <p>aquele banho pra ficar cheirosinho desde pequeno</p>
-          <a href="contato.html">R$ ,00</a>
+          <img src="img\banho1.jpg" alt="Filhote tomando banho" />
+          <h2>Banho para Filhotes</h2>
+          <p>
+            Um banho suave, com produtos específicos para os pequenos, deixando
+            seu filhote limpinho e perfumado!
+          </p>
+          <a href="contato.html">R$  35,00</a>
         </article>
 
         <article class="produtos">
-          <img src="img\2150283107.jpg" alt="" />
-          <h2>Banho porte pequeno</h2>
-          <p></p>
-          <a href="contato.html"> R$ ,00</a>
+          <img src="img\banho3.jpg" alt="Cachorro pequeno tomando banho" />
+          <h2>Banho - Porte Pequeno</h2>
+          <p>
+            Ideal para cães de pequeno porte, com todo cuidado que ele merece!
+          </p>
+          <a href="contato.html">R$ 40,00</a>
         </article>
 
         <article class="produtos produtos-container">
-          <img src="img\51401.jpg" alt="" />
-          <h2>Banho porte medio</h2>
-          <p>Ele fica cheirosinho e limpinho</p>
-          <a href="contato.html"> R$ ,00</a>
+          <img src="img\banho2.jpg" alt="Cachorro médio tomando banho" />
+          <h2>Banho - Porte Médio</h2>
+          <p>
+            Banho completo com carinho, deixando seu pet cheiroso e relaxado.
+          </p>
+          <a href="contato.html">R$ 50,00</a>
         </article>
 
         <article class="produtos produtos-container">
-          <img src="img\2148982406.jpg" alt="" />
-          <h2>Banho porte grande</h2>
-          <p>Aqui tem de tudo pra ele ficar bem!</p>
-          <a href="contato.html"> R$ ,00</a>
+          <img src="img\banho4.jpg" alt="Cachorro grande sendo lavado" />
+          <h2>Banho - Porte Grande</h2>
+          <p>
+            Especial para os grandões da casa! Banho com cuidado redobrado e
+            muito carinho.
+          </p>
+          <a href="contato.html">R$ 65,00</a>
         </article>
-
       </section>
 
       <section class="content conteudo-principal">
@@ -70,28 +79,45 @@
 
       <section class="content conteudo-principal">
         <article class="produtos">
-          <img src="img\2150283107.jpg" alt="" />
-          <h2>Tosa pelo curto</h2>
-          <p>Aqui seu pet é o cargo chefe e sai bem limpinho</p>
-          <a href="contato.html"> R$ ,00</a>
+          <img src="img\tosa4.jpg" alt="Pet com pelo curto" />
+          <h2>Tosa - Pelo Curto</h2>
+          <p>
+            Prática e refrescante, perfeita para manter o pet confortável e
+            limpo!
+          </p>
+          <a href="contato.html">R$ 40,00</a>
         </article>
 
         <article class="produtos produtos-container">
-          <img src="img\51401.jpg" alt="" />
-          <h2>Tosa pelo medio</h2>
-          <p>Ele fica cheirosinho e limpinho</p>
-          <a href="contato.html"> R$ ,00</a>
+          <img src="img\tosa2.jpg" alt="Pet com pelo médio tosado" />
+          <h2>Tosa - Pelo Médio</h2>
+          <p>
+            Para pets com pelagem média. Higiene, beleza e muito cuidado no
+            corte!
+          </p>
+          <a href="contato.html">R$ 55,00</a>
         </article>
 
         <article class="produtos produtos-container">
-          <img src="img\2148982406.jpg" alt="" />
-          <h2>Tosa pelo grande</h2>
-          <p>Aqui tem de tudo pra ele ficar bem!</p>
-          <a href="contato.html"> R$ ,00</a>
+          <img src="img\tosa3.jpg" alt="Pet com pelo longo tosado" />
+          <h2>Tosa - Pelo Longo</h2>
+          <p>
+            Corte delicado para pets com pelagem longa. Mais conforto e leveza
+            no dia a dia!
+          </p>
+          <a href="contato.html">R$ 65,00</a>
         </article>
 
+        <article class="produtos produtos-container">
+          <img src="img\tosa3.jpg" alt="Pet com tosa e banho" />
+          <h2>Pacote: Tosa + Banho</h2>
+          <p>
+            Combo especial para deixar seu pet limpinho, cheiroso e com o visual
+            renovado!
+          </p>
+          <a href="contato.html"><del>R$ 85,00</del> R$ 53,00</a>
+        </article>
       </section>
-      
 
       <section class="parallax parallax2">
         <article>
@@ -100,29 +126,85 @@
       </section>
 
       <section class="content conteudo-principal">
+        <aside class="barra-lateral">
+
+          <h3>Por que escolher a Pet Paws?</h3>
+          <ul id="lista-beneficios">
+            <li>✔ Equipe especializada</li>
+            <li>✔ Ambiente limpo e seguro</li>
+            <li>✔ Produtos de alta qualidade</li>
+            <li>✔ Amor pelos pets em cada detalhe</li>
+          </ul>
+
+          <a href="contato.html">Contato </a>
+        </aside>
+        <table class="tabela-promocoes">
+          <thead>
+            <tr>
+              <th>Serviço</th>
+              <th>Preço Original</th>
+              <th>Promoção</th>
+              <th>Válido até</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Banho + Tosa (Porte Pequeno)</td>
+              <td><del>R$ 56,00</del></td>
+              <td><strong>R$ 39,90</strong></td>
+              <td>30/04/2025</td>
+            </tr>
+            <tr>
+              <td>Banho (Porte Médio)</td>
+              <td><del>R$ 45,00</del></td>
+              <td><strong>R$ 35,00</strong></td>
+              <td>30/04/2025</td>
+            </tr>
+            <tr>
+              <td>Tosa (Pelo Longo)</td>
+              <td><del>R$ 70,00</del></td>
+              <td><strong>R$ 49,90</strong></td>
+              <td>30/04/2025</td>
+            </tr>
+            <tr>
+              <td>Combo Acessórios + Petisco</td>
+              <td><del>R$ 80,00</del></td>
+              <td><strong>R$ 59,90</strong></td>
+              <td>Enquanto durar o estoque</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section class="content conteudo-principal">
         <article class="produtos">
-          <img src="img\2150283107.jpg" alt="" />
-          <h2>Banho</h2>
-          <p>Aqui seu pet é o cargo chefe e sai bem limpinho</p>
-          <a href="servicos.html"> Clique aqui</a>
+          <img src="img\banho2.jpg" alt="Banho pet promoção" />
+          <h2>Banho Promocional</h2>
+          <p>
+            Seu pet limpinho e perfumado por um precinho especial. Aproveite!
+          </p>
+          <a href="contato.html">Ver detalhes</a>
         </article>
 
         <article class="produtos produtos-container">
-          <img src="img\51401.jpg" alt="" />
-          <h2>Tosa</h2>
-          <p>Ele fica cheirosinho e limpinho</p>
+          <img src="img\tosa2.jpg" alt="Tosa com desconto" />
+          <h2>Tosa com Desconto</h2>
+          <p>Desconto exclusivo em tosas para pets de todos os portes!</p>
+          <a href="contato.html">Ver detalhes</a>
         </article>
 
         <article class="produtos produtos-container">
-          <img src="img\2148982406.jpg" alt="" />
-          <h2>Acessorios</h2>
-          <p>Aqui tem de tudo pra ele ficar bem!</p>
+          <img src="img\acessorio1.jpg" alt="Acessórios pet" />
+          <h2>Kit de Acessórios</h2>
+          <p>Compre 2, leve 3! Coleiras, brinquedos e mais.</p>
+          <a href="contato.html">Ver detalhes</a>
         </article>
 
         <article class="produtos produtos-container">
-          <img src="img\2149202496.jpg" alt="" />
+          <img src="img\comidinha1.jpg" alt="Comidinhas para pets" />
           <h2>Comidinhas</h2>
-          <p>Descrição do produto 2</p>
+          <p>Rações e petiscos com até 25% de desconto. Imperdível!</p>
+          <a href="contato.html">Ver detalhes</a>
         </article>
       </section>
     </main>
