Petshop - Lojinha e contatos quase completos

--- a/atividades/atividade004-petshop/home.html
+++ b/atividades/atividade004-petshop/home.html
@@ -19,7 +19,7 @@
     <nav class="navegacao">
       <a href="home.html">home</a>
       <a href="servicos.html">serviços</a>
-      <a href="produtos.html">produtos</a>
+      <a href="produtos.html">lojinha</a>
       <a href="contato.html">contato</a>
     </nav>
 
@@ -79,7 +79,7 @@
           <a href="servicos.html"> Clique aqui</a>
         </article>
 
-        <article class="produtos produtos-container">
+        <article class="produtos">
           <img src="img\tosa1.jpg" alt="" />
           <h2>Tosa</h2>
           <p>
@@ -88,7 +88,7 @@
           <a href="servicos.html"> Clique aqui</a>
         </article>
 
-        <article class="produtos produtos-container">
+        <article class="produtos">
           <img src="img\acessorio2.jpg" alt="" />
           <h2>Acessorios</h2>
           <p>
@@ -98,7 +98,7 @@
           <a href="produtos.html"> Clique aqui</a>
         </article>
 
-        <article class="produtos produtos-container">
+        <article class="produtos">
           <img src="img\comidinha1.jpg" alt="" />
           <h2>Comidinhas</h2>
           <p>
