--- a/atividades/atividade004-petshop/contato.html
+++ b/atividades/atividade004-petshop/contato.html
@@ -12,27 +12,22 @@
   </head>
 
   <body>
-    <header>
-      <h1 id="logo"><img src="img\dog-paw1.png" alt="" /> Pet Paws</h1>
+    <header id="fundo-header">
+      <h1><img src="img\dog-paw1.png" alt="" /> Pet Paws</h1>
     </header>
 
     <nav class="navegacao">
-      <a href="home.html">home</a>
+      <a href="home.html">Quem somos</a>
       <a href="servicos.html">serviços</a>
       <a href="produtos.html">lojinha</a>
       <a href="contato.html">contato</a>
     </nav>
 
     <main>
-      <section class="parallax parallax1">
-        <article>
-          <h1>Contato</h1>
-        </article>
-      </section>
 
       <section class="content conteudo-principal">
         <div class="area-conteudo">
-          <h2 style="margin-top: 30px">Canais de Atendimento</h2>
+          <h1>Canais de Atendimento</h1>
           <table class="tabela-promocoes">
             <thead>
               <tr>
@@ -142,6 +137,58 @@
         <article>
           <h1>Outras Unidades</h1>
         </article>
+      </section>
+
+      <section class="content conteudo-principal">
+
+        <div class="area-conteudo">
+          <table class="tabela-promocoes">
+            <thead>
+              <tr>
+                <th>Estado</th>
+                <th>Local</th>
+                <th>H. Funcionamento
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>MG</td>
+                <td><a href="https://www.google.com/maps/search/PETSHOP+MG/@-21.7345131,-43.3945662,15z?entry=ttu&g_ep=EgoyMDI1MDQxNi4xIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D">Rua Grande do Sul, 580 - Barro Preto, Belo Horizonte, MG</a></td>
+                <td>6h - 6h</td>
+              </tr>
+              <tr>
+                <td>MG</td>
+                <td><a href="https://www.google.com/maps/search/PETSHOP+MG/@-21.7437094,-43.3827582,15z?entry=ttu&g_ep=EgoyMDI1MDQxNi4xIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D">Rua 11, 780 - Jardim Goiás, Campin, MG</a>></td>
+                <td>7h - 6h</td>
+              </tr>
+              <tr>
+                <td>SP</td>
+                <td><a href="https://www.google.com/maps/search/PETSHOP+sp/@-23.568453,-46.627528,11z?entry=ttu&g_ep=EgoyMDI1MDQxNi4xIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D">Avenida Paulista, 1000 - Guarulhos, São Paulo, SP</a></td>
+                <td>6h - 5h</td>
+              </tr>
+              <tr>
+                <td>RJ</td>
+                <td><a href="https://www.google.com/maps/place/Cl%C3%ADnica+Veterin%C3%A1ria+Samuc%C3%A3o+-+Coelho+Neto/@-22.9182985,-43.5302247,11z/data=!4m9!1m2!2m1!1sPETSHOP+rj!3m5!1s0x9964a08e34d40d:0xe32321bd941719ee!8m2!3d-22.8299805!4d-43.3458553!16s%2Fg%2F1tcyb3km?entry=ttu&g_ep=EgoyMDI1MDQxNi4xIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D">Avenida santa, 1000 - Bela Vista, RJ</a></td>
+                <td>8h - 8h</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <aside class="barra-lateral">
+          <h3>Unidade principal</h3>
+
+          <a href="https://www.google.com/maps/search/PETSHOP+MG/@-21.7364769,-43.3637779,16z?entry=ttu&g_ep=EgoyMDI1MDQxNi4xIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D">
+             <img src="img\5653187_2947938.jpg">
+          </a>
+          <ul id="lista-beneficios">
+            <li>📞 Telefone: (11) 99999-9999</li>
+            <li>✉️ E-mail: atendimento@petpaws.com.br</li>
+            <li>📍 Endereço: Rua dos Pets, 123 - SP</li>
+            <li>🕒 Atendimento: Seg a Sab, das 08h às 18h</li>
+          </ul>
+        </aside>
       </section>
     
     </main>
