--- a/atividades/atividade004-petshop/servicos.html
+++ b/atividades/atividade004-petshop/servicos.html
@@ -12,30 +12,25 @@
   </head>
 
   <body>
-    <header>
-      <h1 id="logo"><img src="img\dog-paw1.png" alt="" /> Pet Paws</h1>
+    <header id="fundo-header">
+      <h1><img src="img\dog-paw1.png" alt="" /> Pet Paws</h1>
     </header>
 
     <nav class="navegacao">
-      <a href="home.html">home</a>
+      <a href="home.html">Quem somos</a>
       <a href="servicos.html">serviços</a>
       <a href="produtos.html">lojinha</a>
       <a href="contato.html">contato</a>
     </nav>
 
     <main>
-      <section class="parallax parallax1">
-        <article>
-          <h1>Trabalhando com 4 patas </h1>
-        </article>
-      </section>
 
       <section class="content conteudo-principal">
         <h1>Banhos</h1>
       </section>
       <section class="content conteudo-principal">
         <article class="produtos  ">
-          <img src="img\banho1.jpg" alt="Filhote tomando banho" />
+          <img src="img\banho1.jpg"/>
           <h2>Banho para Filhotes</h2>
           <p>
             Um banho suave, com produtos específicos para os pequenos, deixando
@@ -45,7 +40,7 @@
         </article>
 
         <article class="produtos">
-          <img src="img\banho3.jpg" alt="Cachorro pequeno tomando banho" />
+          <img src="img\banho3.jpg"/>
           <h2>Banho - Porte Pequeno</h2>
           <p>
             Ideal para cães de pequeno porte, com todo cuidado que ele merece!
@@ -54,7 +49,7 @@
         </article>
 
         <article class="produtos  ">
-          <img src="img\banho2.jpg" alt="Cachorro médio tomando banho" />
+          <img src="img\banho2.jpg"/>
           <h2>Banho - Porte Médio</h2>
           <p>
             Banho completo com carinho, deixando seu pet cheiroso e relaxado.
@@ -63,7 +58,7 @@
         </article>
 
         <article class="produtos  ">
-          <img src="img\banho4.jpg" alt="Cachorro grande sendo lavado" />
+          <img src="img\banho4.jpg"/>
           <h2>Banho - Porte Grande</h2>
           <p>
             Especial para os grandões da casa! Banho com cuidado redobrado e
@@ -79,7 +74,7 @@
 
       <section class="content conteudo-principal">
         <article class="produtos">
-          <img src="img\tosa4.jpg" alt="Pet com pelo curto" />
+          <img src="img\tosa4.jpg"/>
           <h2>Tosa - Pelo Curto</h2>
           <p>
             Prática e refrescante, perfeita para manter o pet confortável e
@@ -89,7 +84,7 @@
         </article>
 
         <article class="produtos  ">
-          <img src="img\tosa2.jpg" alt="Pet com pelo médio tosado" />
+          <img src="img\tosa2.jpg"/>
           <h2>Tosa - Pelo Médio</h2>
           <p>
             Para pets com pelagem média. Higiene, beleza e muito cuidado no
@@ -99,7 +94,7 @@
         </article>
 
         <article class="produtos  ">
-          <img src="img\tosa3.jpg" alt="Pet com pelo longo tosado" />
+          <img src="img\tosa3.jpg"/>
           <h2>Tosa - Pelo Longo</h2>
           <p>
             Corte delicado para pets com pelagem longa. Mais conforto e leveza
@@ -109,7 +104,7 @@
         </article>
 
         <article class="produtos  ">
-          <img src="img\tosa3.jpg" alt="Pet com tosa e banho" />
+          <img src="img\tosa3.jpg"/>
           <h2>Pacote: Tosa + Banho</h2>
           <p>
             Combo especial para deixar seu pet limpinho, cheiroso e com o visual
@@ -179,34 +174,40 @@
       </section>
 
       <section class="content conteudo-principal">
-        <article class="produtos">
-          <img src="img\banho2.jpg" alt="Banho pet promoção" />
+        <article class="produtos">        
           <h2>Banho Promocional</h2>
           <p>
             Seu pet limpinho e perfumado por um precinho especial. Aproveite!
           </p>
-          <a href="contato.html">Ver detalhes</a>
+          <a href="contato.html">
+            <img src="img\banho2.jpg"/>
+          </a>
+          
         </article>
 
         <article class="produtos  ">
-          <img src="img\tosa2.jpg" alt="Tosa com desconto" />
           <h2>Tosa com Desconto</h2>
           <p>Desconto exclusivo em tosas para pets de todos os portes!</p>
-          <a href="contato.html">Ver detalhes</a>
+          <a href="contato.html">
+            <img src="img\tosa2.jpg"/>
+          </a>
+              
         </article>
 
         <article class="produtos  ">
-          <img src="img\acessorio1.jpg" alt="Acessórios pet" />
           <h2>Kit de Acessórios</h2>
           <p>Compre 2, leve 3! Coleiras, brinquedos e mais.</p>
-          <a href="contato.html">Ver detalhes</a>
+          <a href="contato.html">
+            <img src="img\acessorio1.jpg"/>
+          </a>
         </article>
 
-        <article class="produtos  ">
-          <img src="img\comidinha1.jpg" alt="Comidinhas para pets" />
+        <article class="produtos  ">        
           <h2>Comidinhas</h2>
           <p>Rações e petiscos com até 25% de desconto. Imperdível!</p>
-          <a href="contato.html">Ver detalhes</a>
+          <a href="contato.html">
+            <img src="img\comidinha1.jpg"/>
+          </a>
         </article>
       </section>
 
