--- a/atividades/atividade004-petshop/produtos.html
+++ b/atividades/atividade004-petshop/produtos.html
@@ -12,23 +12,18 @@
   </head>
 
   <body>
-    <header>
-      <h1 id="logo"><img src="img\dog-paw1.png" alt="" /> Pet Paws</h1>
+    <header id="fundo-header">
+      <h1><img src="img\dog-paw1.png" alt="" /> Pet Paws</h1>
     </header>
 
     <nav class="navegacao">
-      <a href="home.html">home</a>
+      <a href="home.html">Quem somos</a>
       <a href="servicos.html">serviços</a>
       <a href="produtos.html">lojinha</a>
       <a href="contato.html">contato</a>
     </nav>
 
     <main>
-      <section class="parallax parallax1">
-        <article>
-          <h1>Produtos Para seu Pet</h1>
-        </article>
-      </section>
       
       <section class="content conteudo-principal">
         <h1>🍖 Comidinhas</h1>
